--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "reka-ui": "^2.1.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
+    "vite-plugin-vuetify": "^2.1.0",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0",
-    "vuetify": "^3.7.18"
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
@@ -34,6 +34,7 @@
     "globals": "^16.0.0",
     "postcss": "^8.5.3",
     "prettier": "3.5.3",
+    "sass-embedded": "^1.86.0",
     "tailwindcss": "^3.4.17",
     "vite": "^6.2.1",
     "vite-plugin-vue-devtools": "^7.7.2"
