--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "tailwindcss-animate": "^1.0.7",
     "vite-plugin-vuetify": "^2.1.0",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vuetify": "^3.7.18"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
