--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "reka-ui": "^2.1.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
+    "vanilla-cookieconsent": "^3.1.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
